2008-11-18  Aaron Boodman  aa@chromium.org

Reviewed by Maciej Stachowiak.

        https://bugs.webkit.org/show_bug.cgi?id=22301
        Always call dispatchDidFinishDocumentLoad before Window's onload event.

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::finishedParsing):



Canonical link: https://commits.webkit.org/30783@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38574 268f45cc-cd09-0410-ab3c-d52691b4dbfc